--- a/CSSAnimate/Happy.html
+++ b/CSSAnimate/Happy.html
@@ -13,7 +13,7 @@
   <div id="Love">
     <header>
       <h1>Happy Birthday!</h1>
-      <h3>To the best mom ever!<h3>
+      <h3>To the best mom ever!</h3>
     </header>
     <main>
       <h2 class="Title">What's going to happen on your birthday?!</h2>
