--- a/CSSAnimate/Happy.html
+++ b/CSSAnimate/Happy.html
@@ -35,7 +35,7 @@
       </p>
     </main>
     <footer>
-      <h3>You're not getting older, you're getting wiser!</h3>
+      <h2 class = "foot">You're not getting older, you're getting wiser!</h2>
     </footer>
   </div>
 </body>
